--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 <div class="container">
     <div class="card" onclick="showTreeDetails('Ёлка 1', '3990', ['static/elka1', 'static/elka1_extra'])">
-        <img src="/static/1.jpg" alt="Елка 1">
+        <img src="static/1.jpg" alt="Елка 1">
         <h2>Ледяная принцесса</h2>
         <p>Цена от: 3990₽</p>
         <button onclick="openModal()">Оставить заявку</button>
@@ -268,77 +268,77 @@
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 3', '4990', ['static/elka3', 'static/elka3_extra'])">
-        <img src="/static/3.jpg" alt="Елка 3">
+        <img src="static/3.jpg" alt="Елка 3">
         <h2>Лесная фея</h2>
         <p>Цена от: 4990₽</p>
         <button onclick="openModal()">Оставить заявку</button>
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 4', '3990', ['static/elka4', 'static/elka4_extra'])">
-        <img src="/static/4.jpg" alt="Елка 4">
+        <img src="static/4.jpg" alt="Елка 4">
         <h2>Сказочная ель</h2>
         <p>Цена от: 3990₽</p>
         <button onclick="openModal()">Оставить заявку</button>
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 5', '4490', ['static/elka5', 'static/elka5_extra'])">
-        <img src="/static/5.jpg" alt="Елка 5">
+        <img src="static/5.jpg" alt="Елка 5">
         <h2>Лесной шарм</h2>
         <p>Цена от: 4490₽</p>
         <button onclick="openModal()">Оставить заявку</button>
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 6', '4990', ['static/elka6', 'static/elka6_extra'])">
-        <img src="/static/6.jpg" alt="Елка 6">
+        <img src="static/6.jpg" alt="Елка 6">
         <h2>Чудесная</h2>
         <p>Цена от: 4990₽</p>
         <button onclick="openModal()">Оставить заявку</button>
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 7', '3990', ['static/elka7', 'static/elka7_extra'])">
-        <img src="/static/7.jpg" alt="Елка 7">
+        <img src="static/7.jpg" alt="Елка 7">
         <h2>Праздничная</h2>
         <p>Цена от: 3990₽</p>
         <button onclick="openModal()">Оставить заявку</button>
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 8', '4490', ['static/elka8', 'static/elka8_extra'])">
-        <img src="/static/8.jpg" alt="Елка 8">
+        <img src="static/8.jpg" alt="Елка 8">
         <h2>Ёлка чудес</h2>
         <p>Цена от: 4490₽</p>
         <button onclick="openModal()">Оставить заявку</button>
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 9', '4990', ['static/elka9', 'static/elka9_extra'])">
-        <img src="/static/9.jpg" alt="Елка 9">
+        <img src="static/9.jpg" alt="Елка 9">
         <h2>Мечта</h2>
         <p>Цена от: 4990₽</p>
         <button onclick="openModal()">Оставить заявку</button>
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 10', '3990', ['static/elka10', 'static/elka10_extra'])">
-        <img src="/static/10.jpg" alt="Елка 10">
+        <img src="static/10.jpg" alt="Елка 10">
         <h2>Лесная легенда</h2>
         <p>Цена от: 3990₽</p>
         <button onclick="openModal()">Оставить заявку</button>
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 11', '4490', ['static/elka11', 'static/elka11_extra'])">
-        <img src="/static/11.jpg" alt="Елка 11">
+        <img src="static/11.jpg" alt="Елка 11">
         <h2>Европейская</h2>
         <p>Цена от: 4490₽</p>
         <button onclick="openModal()">Оставить заявку</button>
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 12', '4990', ['static/elka12', 'static/elka12_extra'])">
-        <img src="/static/12.jpg" alt="Елка 12">
+        <img src="static/12.jpg" alt="Елка 12">
         <h2>Сибирская сказка</h2>
         <p>Цена от: 4990₽</p>
         <button onclick="openModal()">Оставить заявку</button>
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 13', '3990', ['static/elka13', 'static/elka13_extra'])">
-        <img src="/static/16.jpg" alt="Елка 13">
+        <img src="static/16.jpg" alt="Елка 13">
         <h2>Зимняя сказка</h2>
         <p>Цена от: 3990₽</p>
         <button onclick="openModal()">Оставить заявку</button>
