--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     </div>
 
     <div class="card" onclick="showTreeDetails('Ёлка 2', '4490', ['static/elka2', 'static/elka2_extra'])">
-        <img src="/static/2.jpg" alt="Елка 2">
+        <img src="static/2.jpg" alt="Елка 2">
         <h2>Хвойное чудо</h2>
         <p>Цена от: 4490₽</p>
         <button onclick="openModal()">Оставить заявку</button>
